apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__it_logs_messages@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields:
    target: ""
  level: INFO
  message: info log
- fields:
    target: ""
  level: WARN
  message: warn log
- fields:
    target: ""
  level: ERROR
  message: error log
