apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__it_logs_the_text_of_a_caught_router_function_error@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields:
    target: ""
  level: ERROR
  message: "missing header: header 'x-custom-header' not found"
- fields:
    target: ""
  level: ERROR
  message: "header 'x-custom-header' not found"
