apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__it_prints_messages_to_log@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields:
    target: ""
  level: INFO
  message: info log
