apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__it_redacts_a_binding_error_that_carries_no_message@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields: {}
  level: ERROR
  message: "map_request callback failed: ErrorDetails {\n    status: 500,\n    message: Some(\n        \"Internal Server Error\",\n    ),\n    position: Some(\n        Position {\n            line: Some(\n                15,\n            ),\n            pos: Some(\n                32,\n            ),\n        },\n    ),\n    body: None,\n    internal_detail: Some(\n        \"rhai execution error: 'Runtime error (line 15, position 32)'\",\n    ),\n}"
  span:
    name: rhai_plugin
    otel.kind: INTERNAL
    rhai service: "supergraph :: Request"
  spans:
    - name: rhai_plugin
      otel.kind: INTERNAL
      rhai service: "supergraph :: Request"
