apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__it_redacts_a_router_function_error@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields: {}
  level: ERROR
  message: "map_request callback failed: ErrorDetails {\n    status: 500,\n    message: Some(\n        \"Internal Server Error\",\n    ),\n    position: None,\n    body: None,\n    internal_detail: Some(\n        \"rhai execution error: 'Runtime error: header 'x-header-that-is-not-there' not found (line 14, position 32)'\",\n    ),\n}"
  span:
    name: rhai_plugin
    otel.kind: INTERNAL
    rhai service: "supergraph :: Request"
  spans:
    - name: rhai_plugin
      otel.kind: INTERNAL
      rhai service: "supergraph :: Request"
