apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__it_redacts_engine_errors_from_client_responses@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields: {}
  level: ERROR
  message: "map_request callback failed: ErrorDetails {\n    status: 500,\n    message: Some(\n        \"Internal Server Error\",\n    ),\n    position: None,\n    body: None,\n    internal_detail: Some(\n        \"rhai execution error: 'Function not found: this_function_does_not_exist () (line 14, position 5)'\",\n    ),\n}"
  span:
    name: rhai_plugin
    otel.kind: INTERNAL
    rhai service: "execution :: Request"
  spans:
    - name: rhai_plugin
      otel.kind: INTERNAL
      rhai service: "execution :: Request"
