apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__rhai_plugin_execution_service_error@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields: {}
  level: ERROR
  message: "[message]"
  span:
    name: rhai_plugin
    otel.kind: INTERNAL
    rhai service: "execution :: Request"
  spans:
    - name: rhai_plugin
      otel.kind: INTERNAL
      rhai service: "execution :: Request"
